--- a/Peppermint/Base.lproj/Main.storyboard
+++ b/Peppermint/Base.lproj/Main.storyboard
@@ -1494,6 +1494,12 @@ Version 1.0.0</string>
                                     <constraint firstAttribute="height" constant="55" id="f2t-5y-PRb"/>
                                 </constraints>
                             </button>
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kOH-bN-wWh">
+                                <rect key="frame" x="0.0" y="681" width="414" height="55"/>
+                                <connections>
+                                    <action selector="cancelSendingButtonPressed:" destination="NAA-3N-hVr" eventType="touchUpInside" id="pdf-am-q0h"/>
+                                </connections>
+                            </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4XM-r8-jWN">
                                 <rect key="frame" x="129" y="651" width="250" height="40"/>
                                 <subviews>
@@ -1532,6 +1538,7 @@ Version 1.0.0</string>
                             <constraint firstAttribute="bottom" secondItem="Tec-iN-Ad0" secondAttribute="bottom" constant="-1" id="Hma-ff-kzB"/>
                             <constraint firstItem="9uv-HA-C7W" firstAttribute="top" secondItem="fzK-41-yXK" secondAttribute="bottom" id="HzF-mH-MaL"/>
                             <constraint firstAttribute="trailing" secondItem="4XM-r8-jWN" secondAttribute="trailing" constant="35" id="L0A-HN-Bp4"/>
+                            <constraint firstItem="kOH-bN-wWh" firstAttribute="leading" secondItem="4qC-EC-dhR" secondAttribute="leading" id="RZi-sQ-bQD"/>
                             <constraint firstItem="fzK-41-yXK" firstAttribute="top" secondItem="4XM-r8-jWN" secondAttribute="bottom" constant="-10" id="Ri4-Wt-NpN"/>
                             <constraint firstItem="Tec-iN-Ad0" firstAttribute="leading" secondItem="4qC-EC-dhR" secondAttribute="leading" constant="-1" id="T0f-5i-ceF"/>
                             <constraint firstAttribute="trailing" secondItem="Tec-iN-Ad0" secondAttribute="trailing" constant="-1" id="VaW-hU-cnu"/>
@@ -1543,7 +1550,10 @@ Version 1.0.0</string>
                             <constraint firstItem="9rV-hA-tP2" firstAttribute="top" secondItem="Ptb-mZ-wF6" secondAttribute="bottom" constant="15" id="j3K-La-I28"/>
                             <constraint firstItem="Vfi-st-4Ne" firstAttribute="top" secondItem="4qC-EC-dhR" secondAttribute="top" id="m48-Xs-wJs"/>
                             <constraint firstAttribute="trailing" secondItem="Ptb-mZ-wF6" secondAttribute="trailing" id="noB-yF-d8A"/>
+                            <constraint firstItem="kOH-bN-wWh" firstAttribute="top" secondItem="Ptb-mZ-wF6" secondAttribute="bottom" id="q2c-z0-ikQ"/>
+                            <constraint firstItem="9uv-HA-C7W" firstAttribute="top" secondItem="kOH-bN-wWh" secondAttribute="bottom" id="sfm-7p-i68"/>
                             <constraint firstItem="9rV-hA-tP2" firstAttribute="centerY" secondItem="4qC-EC-dhR" secondAttribute="centerY" id="xIn-hc-eNG"/>
+                            <constraint firstAttribute="trailing" secondItem="kOH-bN-wWh" secondAttribute="trailing" id="yeK-Vg-yS3"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
@@ -1558,6 +1568,7 @@ Version 1.0.0</string>
                     <connections>
                         <outlet property="avatarImageView" destination="c98-TQ-lrM" id="1L9-lS-roZ"/>
                         <outlet property="bottomInformationLabel" destination="Tec-iN-Ad0" id="iAT-0V-Vuh"/>
+                        <outlet property="cancelSendingButton" destination="kOH-bN-wWh" id="h89-bO-uvj"/>
                         <outlet property="holdToRecordLabel" destination="b2s-bN-Z3E" id="jWn-XF-izj"/>
                         <outlet property="holdToRecordView" destination="4XM-r8-jWN" id="za5-Gz-y6N"/>
                         <outlet property="microphoneView" destination="9rV-hA-tP2" id="20Y-0A-Y7O"/>
